src/assets/App.css
.App {
  min-height: 100vh;
  position: relative;
  background-color: hsl(0, 0%, 97%);
}


/* BACKGROUND BANNER */
.banner {
  height: 300px;
  background-image: url("./images/bg-desktop-light.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}
@media only screen and (min-width: 1600px) {.banner {height: 335px;}}



/* MAIN CONTAINER */
.main-container {

  width: 80%;
  max-width: 550px;
  margin: 0 auto;

  /* move main container over banner neg. margin to remove white space at btm */
  position: relative;
  top: -210px;
  margin-bottom: -200px;

  display: flex;
  flex-direction: column;
}


.title {
  margin-bottom: 1.25rem;
  color: #fff;
  letter-spacing: .5rem;
}

.icon {
  position: absolute;
  right: 0;
}

.list-container {
  border-radius: 5px;
  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
}

